<resources>
    <string name="app_name" translatable="false">Am News</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="title">Title</string>
    <string name="search">Search</string>
    <string name="Continue">Continue</string>
    <string name="all_mauritius_news">All Mauritius news</string>
    <string name="let_s_go">Let’s Go</string>

    <string name="title1">Your Daily Digital Read</string>
    <string name="title2">Personalized Feed </string>
    <string name="title3">News On The Go</string>

    <string name="desc1">Smart Short Stories in Crisp Five Bullet Points</string>
    <string name="desc2">Latest News From The Countries &amp; Categories You Choose</string>
    <string name="desc3">Breaking Credible Stories From Trusted Sources</string>
    <string name="select_a_language">Select a Language</string>
    <string name="please_tell_us_what_are_your_nlanguage_preferences">Please tell us what are your\nlanguage preferences</string>


    <string name="SelectLanguage">Select Language</string>


    <string name="french" translatable="false">Française</string>
    <string name="english" translatable="false">English</string>
    <string name="hindi" translatable="false">हिन्दी</string>
    <string name="bhojpuri" translatable="false">भोजपुरी</string>

    <string name="frenchVal" translatable="false">fr</string>
    <string name="englishVal" translatable="false">en</string>
    <string name="hindiVal" translatable="false">hi</string>
    <string name="bhojpuriVal" translatable="false">bho</string>

    <string name="already_have_an_account">Already have an account</string>
    <string name="login_here">Login Here</string>
    <string name="create_account">Create Account</string>

    <string name="choose_how_you_want_to_login_in_the_app">Choose how you want to login in the app</string>
    <string name="choose_how_you_want_to_create_your_account">Choose how you want to create your account</string>

    <string name="login_with_mobile_number"><![CDATA[Login with <b>Mobile Number</b>]]></string>
    <string name="signup_with_mobile_number"><![CDATA[SignUp with <b>Mobile Number</b>]]></string>

    <string name="login_with_google_account"><![CDATA[Login with <b>Google Account</b>]]></string>
    <string name="signup_with_google_account"><![CDATA[SignUp with <b>Google Account</b>]]></string>

    <string name="enter_as_guest_user">Enter as <b>Guest User</b></string>

    <string name="first_time_user_signup_here"><![CDATA[First Time User? <b><font color="#3D52C0">SignUp Here</font></b>]]></string>
    <string name="already_a_user_login_here"><![CDATA[Already a user? <b><font color="#3D52C0">Login Here</font></b>]]></string>
    <string name="mobile_number">Mobile Number</string>

    <string name="by_continuing">By continuing , you agree to our\n<font color="#3D52C0">Terms of Use</font> and <font color="#3D52C0">Privacy Policy</font></string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="we_will_automatically_detect_the_verification_code_here">We will automatically detect the verification code here</string>
    <string name="verification_code">Verification Code</string>

    <string name="didn_t_get_the_code_resend_code"><![CDATA[Didn’t get the code ? <b>resend code</b>]]></string>
    <string name="didn_t_get_the_code_resend_code_color"><![CDATA[Didn’t get the code ? <b><font color="#3D52C0">resend code</font></b>]]></string>

    <string name="_23_seconds_left"><![CDATA[<b>%s</b> seconds left]]></string>


</resources>