<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_F1F3F9"
    android:paddingVertical="@dimen/_30sdp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitle0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/_133248"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        app:fontFamily="@font/product_sans_bold"
        android:text="@string/please_tell_us_what_are_your_nlanguage_preferences"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/_20sdp"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle0"
        app:layout_constraintBottom_toTopOf="@+id/layout2"
        app:srcCompat="@drawable/walk4"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_5sdp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btLanguage"
        style="@style/PrimaryButtonWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/select_a_language"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="start|center_vertical"
        android:drawableEnd="@drawable/arrowright"
        android:textSize="@dimen/_12sdp"
        android:textAllCaps="false"
        android:visibility="gone"
        />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/top_radius"
        android:paddingVertical="@dimen/_15sdp"
        android:paddingHorizontal="@dimen/_25sdp"
        android:visibility="visible"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/_4E6576"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            app:fontFamily="@font/product_sans_bold"
            android:text="@string/select_a_language"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/_12sdp"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_48sdp"
            app:layout_constraintTop_toBottomOf="@+id/textTitle2"
            app:layout_constraintBottom_toTopOf="@+id/linear2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/unselect_lang_radius"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textRound1"
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_27sdp"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/product_sans_regular"
                android:text="@string/frenchVal"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/circle_shape"
                android:backgroundTint="@color/_0748A9"
                android:gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/_4E6576"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/product_sans_regular"
                android:text="@string/french"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_15sdp"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_48sdp"
            app:layout_constraintBottom_toTopOf="@+id/linear3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/unselect_lang_radius"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textRound2"
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_27sdp"
                android:textColor="@color/_133248"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/product_sans_regular"
                android:text="@string/englishVal"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/circle_shape"
                android:backgroundTint="@color/_FFD601"
                android:gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/_4E6576"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/product_sans_regular"
                android:text="@string/english"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_15sdp"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear3"
            android:layout_width="0dp"
            android:layout_height="@dimen/_48sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/unselect_lang_radius"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textRound3"
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_27sdp"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/product_sans_regular"
                android:text="@string/hindiVal"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/circle_shape"
                android:backgroundTint="@color/_138808"
                android:gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/_4E6576"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/product_sans_regular"
                android:text="@string/hindi"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_15sdp"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>