<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/back_button"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:padding="@dimen/_8sdp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/imageBack"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/introViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textHeaderLoginTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_23sdp"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@+id/imageLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/product_sans_regular"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/enter_verification_code"
                />




            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textDiscLoginTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/_4E6576"
                android:textSize="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/textHeaderadfdsfTxt3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/product_sans_regular"
                android:text="@string/we_will_automatically_detect_the_verification_code_here"
                />




            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textMobileNumberTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/_133248"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/textHeaderadfdsfTxt3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/product_sans_regular"
                android:text="@string/verification_code"
                />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal"
                android:background="@drawable/light_round_corner"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:layout_gravity="center"
                >
                <com.mukesh.mukeshotpview.mukeshOtpView.MukeshOtpView
                    android:id="@+id/otp_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp"
                    app:hideLineWhenFilled="false"
                    app:itemCount="4"
                    app:lineColor="@color/_DCE0E4"
                    app:state_filled="true"
                    app:viewType="none"
                    >

                </com.mukesh.mukeshotpview.mukeshOtpView.MukeshOtpView>

            </androidx.appcompat.widget.LinearLayoutCompat>



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textResendCodeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/_667A88"
                android:textSize="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintTop_toBottomOf="@+id/textHeaderadfdsfTxt3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/product_sans_regular"
                android:text="@string/didn_t_get_the_code_resend_code"
                android:layout_gravity="center_horizontal"
                />



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTimerTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/_667A88"
                android:textSize="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintTop_toBottomOf="@+id/textHeaderadfdsfTxt3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/product_sans_regular"
                android:text="@string/_23_seconds_left"
                android:layout_gravity="center_horizontal"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>




        <com.google.android.material.button.MaterialButton
            android:id="@+id/btSignIn"
            style="@style/PrimaryButtonBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/Continue"
            android:backgroundTint="@color/_0748A9"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>