<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/top_frame"
        android:id="@+id/top_frame"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/top_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/introViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textHeaderTxt2"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textHeaderLoginTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_23sdp"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@+id/imageLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/product_sans_regular"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/login_here"
                />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textDiscLoginTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/_4E6576"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/textHeaderadfdsfTxt3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/product_sans_regular"
                android:text="@string/choose_how_you_want_to_create_your_account"
                />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btGoogle"
                style="@style/PrimaryButtonBlue"
                app:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/login_with_google_account"
                android:textColor="@color/_404040"
                android:textSize="@dimen/_11sdp"
                app:cornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btSave"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:layout_marginStart="@dimen/_10sdp"
                app:strokeColor="@color/_1A1A1A"
                android:layout_marginEnd="@dimen/_10sdp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/google"
                app:iconTintMode="multiply"
                android:gravity="center"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_10sdp"
                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btMobile"
                style="@style/PrimaryButtonBlue"
                app:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/login_with_mobile_number"
                android:textColor="@color/_404040"
                android:textSize="@dimen/_11sdp"
                app:cornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btSave"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:layout_marginStart="@dimen/_10sdp"
                app:strokeColor="@color/_1A1A1A"
                android:layout_marginEnd="@dimen/_10sdp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/mobile_phone_solid"
                app:iconTintMode="multiply"
                android:gravity="center"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_10sdp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btGuest"
                style="@style/PrimaryButtonBlue"
                app:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/enter_as_guest_user"
                android:textColor="@color/_404040"
                android:textSize="@dimen/_11sdp"
                app:cornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btSave"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:layout_marginStart="@dimen/_10sdp"
                app:strokeColor="@color/_1A1A1A"
                android:layout_marginEnd="@dimen/_10sdp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/guest"
                app:iconTintMode="multiply"
                android:gravity="center"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_10sdp"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textHeaderTxt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/_404040"
            android:textSize="@dimen/_11sdp"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            app:fontFamily="@font/roboto_regular"
            android:text="@string/first_time_user_signup_here"
            android:layout_marginBottom="@dimen/_25sdp"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>